--- a/apache2.4/extra/httpd-info.conf
+++ b/apache2.4/extra/httpd-info.conf
@@ -14,7 +14,7 @@
 <Location /server-status>
     SetHandler server-status
     Require host apache.englishtown.com
-    Require ip 127
+    Require local
 </Location>
 
 #
@@ -22,7 +22,7 @@
 # information (ExtendedStatus On) or just basic information (ExtendedStatus
 # Off) when the "server-status" handler is called. The default is Off.
 #
-#ExtendedStatus On
+ExtendedStatus On
 
 #
 # Allow remote server configuration reports, with the URL of
@@ -32,5 +32,5 @@
 <Location /server-info>
     SetHandler server-info
     Require host apache.englishtown.com
-    Require ip 127
+    Require local
 </Location>
