--- a/apache2.4/extra/httpd-ssl.conf
+++ b/apache2.4/extra/httpd-ssl.conf
@@ -36,11 +36,11 @@
 Listen 127.0.0.1:443
 
 <Proxy balancer://siteus_https>
-    BalancerMember https://10.128.43.114:443  retry=0
+    BalancerMember https://169.254.25.213:443  retry=0
 </Proxy>
 
 <Proxy balancer://sitecn_https>
-    BalancerMember https://10.128.43.114:8443  retry=0
+    BalancerMember https://169.254.25.214:443  retry=0
 </Proxy>
 
 ##
@@ -77,8 +77,8 @@ SSLPassPhraseDialog  builtin
 #   Inter-Process Session Cache:
 #   Configure the SSL Session Cache: First the mechanism 
 #   to use and second the expiring timeout (in seconds).
-#SSLSessionCache         "dbm:c:/Apache/2.4/logs/ssl_scache"
-SSLSessionCache        "shmcb:c:/Apache/2.4/logs/ssl_scache(512000)"
+#SSLSessionCache         "dbm:c:/Softwares/Apache24/logs/ssl_scache"
+SSLSessionCache        "shmcb:c:/Softwares/Apache24/logs/ssl_scache(512000)"
 SSLSessionCacheTimeout  300
 
 #   OCSP Stapling (requires OpenSSL 0.9.8h or later)
@@ -95,7 +95,7 @@ SSLSessionCacheTimeout  300
 #   the same mechanism that is used for the SSL session cache
 #   above.  If stapling is used with more than a few certificates,
 #   the size may need to be increased.  (AH01929 will be logged.)
-#SSLStaplingCache "shmcb:c:/Apache/2.4/logs/ssl_stapling(32768)"
+#SSLStaplingCache "shmcb:c:/Softwares/Apache24/logs/ssl_stapling(32768)"
 
 #   Seconds before valid OCSP responses are expired from the cache
 #SSLStaplingStandardCacheTimeout 3600
@@ -107,33 +107,6 @@ SSLSessionCacheTimeout  300
 ## SSL Virtual Host Context
 ##
 
-# # Bad Hosts
-# <VirtualHost 127.0.0.1:443>
-
-#     ServerAdmin dla_hao_developer@ef.com
-#     DocumentRoot "c:/Apache/2.4"
-#     ServerName invalid.englishtown.com
-
-# 	#   SSL Engine Switch:
-# 	#   Enable/Disable SSL for this virtual host.
-# 	SSLEngine on
-
-# 	SSLProxyEngine on
-
-#     RewriteEngine on
-#     RewriteRule ^/(.*)  /bad-hosts.html
-
-#     <Directory "c:/Apache/2.4">
-#         AllowOverride None
-#         Options None
-#         Require all granted
-#     </Directory>
-
-#     ErrorLog "c:/Apache/2.4/logs/invalid-error-https.log"
-#     CustomLog "c:/Apache/2.4/logs/invalid-access-https.log" common
-
-# </VirtualHost>
-
 # Site US - Https
 <VirtualHost 127.0.0.1:443>
 
@@ -143,10 +116,11 @@ ServerAlias localsecure.englishtown.com:443
 ServerAlias dev.englishtown.com:443
 ServerAlias dev-services.englishtown.com:443
 ServerAlias uatdeepblue2.englishtown.com:443
+ServerAlias corporate.thief.com
 
 ServerAdmin admin@example.com
-ErrorLog	"c:/Apache/2.4/logs/siteus-error.log"
-TransferLog "c:/Apache/2.4/logs/siteus-access.log"
+ErrorLog	"c:/Softwares/Apache24/logs/error-siteus.log"
+CustomLog 	"c:/Softwares/Apache24/logs/access-siteus.log" combined
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -154,13 +128,22 @@ SSLEngine on
 
 SSLProxyEngine on
 
-Header merge X-Proxied-By	"Apache2.4"
-Header merge X-VirtualHost  "siteus_https"
+# When access IIS directly, those url rewrite rules need be configured in IIS accordingly.
+RewriteEngine on
+# Frontend Projects
+RewriteRule /_shared/headerfooter/latest/(.*)       /Stash/~mapped-ui-projects/et-ui-headerfooter/dist/$1    [NC,PT]
+RewriteRule /_shared/([^/]+?)/latest/(.*)           /Stash/~mapped-ui-projects/$1/dist/$2 					[NC,PT]
 
 ProxyPreserveHost on
-
 ProxyPass /             balancer://siteus_https/
 ProxyPassReverse /      balancer://siteus_https/
+
+Header merge 	    X-Proxied-By	"Apache2.4"
+Header merge 	    X-VirtualHost  	"siteus_https"
+Header setifempty   Access-Control-Allow-Origin "*" "expr=%{REQUEST_URI} =~ m#^/_shared/#"
+
+# CSP Demo
+Header setifempty   Content-Security-Policy-Report-Only     "default-src https:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; report-uri /csp-reports"
 
 #   Server Certificate:
 #   Point SSLCertificateFile at a PEM encoded certificate.  If
@@ -172,9 +155,9 @@ ProxyPassReverse /      balancer://siteus_https/
 #   Some ECC cipher suites (http://www.ietf.org/rfc/rfc4492.txt)
 #   require an ECC certificate which can also be configured in
 #   parallel.
-SSLCertificateFile "c:/Apache/2.4/conf/server.crt"
-#SSLCertificateFile "c:/Apache/2.4/conf/server-dsa.crt"
-#SSLCertificateFile "c:/Apache/2.4/conf/server-ecc.crt"
+SSLCertificateFile "c:/Softwares/Apache24/conf/labs-server.cer"
+#SSLCertificateFile "c:/Softwares/Apache24/conf/server-dsa.crt"
+#SSLCertificateFile "c:/Softwares/Apache24/conf/server-ecc.crt"
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -182,9 +165,9 @@ SSLCertificateFile "c:/Apache/2.4/conf/server.crt"
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
 #   ECC keys, when in use, can also be configured in parallel
-SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
-#SSLCertificateKeyFile "c:/Apache/2.4/conf/server-dsa.key"
-#SSLCertificateKeyFile "c:/Apache/2.4/conf/server-ecc.key"
+SSLCertificateKeyFile "c:/Softwares/Apache24/conf/labs-server.key"
+#SSLCertificateKeyFile "c:/Softwares/Apache24/conf/server-dsa.key"
+#SSLCertificateKeyFile "c:/Softwares/Apache24/conf/server-ecc.key"
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -193,7 +176,7 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convenience.
-#SSLCertificateChainFile "c:/Apache/2.4/conf/server-ca.crt"
+#SSLCertificateChainFile "c:/Softwares/Apache24/conf/server-ca.crt"
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -202,8 +185,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   Note: Inside SSLCACertificatePath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCACertificatePath "c:/Apache/2.4/conf/ssl.crt"
-#SSLCACertificateFile "c:/Apache/2.4/conf/ssl.crt/ca-bundle.crt"
+#SSLCACertificatePath "c:/Softwares/Apache24/conf/ssl.crt"
+#SSLCACertificateFile "c:/Softwares/Apache24/conf/ssl.crt/ca-bundle.crt"
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -214,8 +197,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCARevocationPath "c:/Apache/2.4/conf/ssl.crl"
-#SSLCARevocationFile "c:/Apache/2.4/conf/ssl.crl/ca-bundle.crl"
+#SSLCARevocationPath "c:/Softwares/Apache24/conf/ssl.crl"
+#SSLCARevocationFile "c:/Softwares/Apache24/conf/ssl.crl/ca-bundle.crl"
 #SSLCARevocationCheck chain
 
 #   Client Authentication (Type):
@@ -231,8 +214,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   file (containing login information for SRP user accounts). 
 #   Requires OpenSSL 1.0.1 or newer. See the mod_ssl FAQ for
 #   detailed instructions on creating this file. Example:
-#   "openssl srp -srpvfile c:/Apache/2.4/conf/passwd.srpv -add username"
-#SSLSRPVerifierFile "c:/Apache/2.4/conf/passwd.srpv"
+#   "openssl srp -srpvfile c:/Softwares/Apache24/conf/passwd.srpv -add username"
+#SSLSRPVerifierFile "c:/Softwares/Apache24/conf/passwd.srpv"
 
 #   Access Control:
 #   With SSLRequire you can do per-directory access control based
@@ -280,7 +263,7 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 <FilesMatch "\.(cgi|shtml|phtml|php)$">
     SSLOptions +StdEnvVars
 </FilesMatch>
-<Directory "c:/Apache/2.4/cgi-bin">
+<Directory "c:/Softwares/Apache24/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
 
@@ -315,7 +298,7 @@ BrowserMatch "MSIE [2-5]" \
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-CustomLog "c:/Apache/2.4/logs/ssl_request.log" \
+CustomLog "c:/Softwares/Apache24/logs/ssl_request.log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>
@@ -331,8 +314,8 @@ ServerAlias devcn.englishtown.com:443
 ServerAlias devcn-services.englishtown.com:443
 
 ServerAdmin admin@example.com
-ErrorLog	"c:/Apache/2.4/logs/sitecn-error.log"
-TransferLog "c:/Apache/2.4/logs/sitecn-access.log"
+ErrorLog	"c:/Softwares/Apache24/logs/error-sitecn.log"
+CustomLog 	"c:/Softwares/Apache24/logs/access-sitecn.log" combined
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -340,13 +323,27 @@ SSLEngine on
 
 SSLProxyEngine on
 
-Header merge X-Proxied-By 	"Apache2.4"
-Header merge X-VirtualHost  "sitecn_https"
+# When access IIS directly, those url rewrite rules need be configured in IIS accordingly.
+RewriteEngine on
+# Frontend Projects
+RewriteRule /_shared/headerfooter/latest/(.*)       /Stash/~mapped-ui-projects/et-ui-headerfooter/dist/$1    [NC,PT]
+RewriteRule /_shared/([^/]+?)/latest/(.*)           /Stash/~mapped-ui-projects/$1/dist/$2 					[NC,PT]
 
 ProxyPreserveHost on
-
 ProxyPass /             balancer://sitecn_https/
 ProxyPassReverse /      balancer://sitecn_https/
+
+# # SSL Termination
+# RequestHeader setifempty X-Is-Secure "true"
+
+Header merge X-Proxied-By 	"Apache2.4"
+Header merge X-VirtualHost  "sitecn_https"
+Header setifempty   Access-Control-Allow-Origin "*" "expr=%{REQUEST_URI} =~ m#^/_shared/#"
+
+# CSP Demo
+# Header setifempty   Content-Security-Policy     "upgrade-insecure-requests;"     "expr=%{REQUEST_URI} =~ m#^/csp-poc/csp-demo-upgrade.html$#"
+# Header setifempty   Content-Security-Policy-Report-Only     "default-src https:; report-uri /csp-reports"     "expr=%{REQUEST_URI} =~ m#^/csp-poc/csp-demo-notupgrade.html$#"
+Header setifempty   Content-Security-Policy-Report-Only     "default-src https:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline'; report-uri /csp-reports"
 
 #   Server Certificate:
 #   Point SSLCertificateFile at a PEM encoded certificate.  If
@@ -358,9 +355,9 @@ ProxyPassReverse /      balancer://sitecn_https/
 #   Some ECC cipher suites (http://www.ietf.org/rfc/rfc4492.txt)
 #   require an ECC certificate which can also be configured in
 #   parallel.
-SSLCertificateFile "c:/Apache/2.4/conf/server.crt"
-#SSLCertificateFile "c:/Apache/2.4/conf/server-dsa.crt"
-#SSLCertificateFile "c:/Apache/2.4/conf/server-ecc.crt"
+SSLCertificateFile "c:/Softwares/Apache24/conf/labs-server.cer"
+#SSLCertificateFile "c:/Softwares/Apache24/conf/server-dsa.crt"
+#SSLCertificateFile "c:/Softwares/Apache24/conf/server-ecc.crt"
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -368,9 +365,9 @@ SSLCertificateFile "c:/Apache/2.4/conf/server.crt"
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
 #   ECC keys, when in use, can also be configured in parallel
-SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
-#SSLCertificateKeyFile "c:/Apache/2.4/conf/server-dsa.key"
-#SSLCertificateKeyFile "c:/Apache/2.4/conf/server-ecc.key"
+SSLCertificateKeyFile "c:/Softwares/Apache24/conf/labs-server.key"
+#SSLCertificateKeyFile "c:/Softwares/Apache24/conf/server-dsa.key"
+#SSLCertificateKeyFile "c:/Softwares/Apache24/conf/server-ecc.key"
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -379,7 +376,7 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   the referenced file can be the same as SSLCertificateFile
 #   when the CA certificates are directly appended to the server
 #   certificate for convenience.
-#SSLCertificateChainFile "c:/Apache/2.4/conf/server-ca.crt"
+#SSLCertificateChainFile "c:/Softwares/Apache24/conf/server-ca.crt"
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
@@ -388,8 +385,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   Note: Inside SSLCACertificatePath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCACertificatePath "c:/Apache/2.4/conf/ssl.crt"
-#SSLCACertificateFile "c:/Apache/2.4/conf/ssl.crt/ca-bundle.crt"
+#SSLCACertificatePath "c:/Softwares/Apache24/conf/ssl.crt"
+#SSLCACertificateFile "c:/Softwares/Apache24/conf/ssl.crt/ca-bundle.crt"
 
 #   Certificate Revocation Lists (CRL):
 #   Set the CA revocation path where to find CA CRLs for client
@@ -400,8 +397,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   Note: Inside SSLCARevocationPath you need hash symlinks
 #         to point to the certificate files. Use the provided
 #         Makefile to update the hash symlinks after changes.
-#SSLCARevocationPath "c:/Apache/2.4/conf/ssl.crl"
-#SSLCARevocationFile "c:/Apache/2.4/conf/ssl.crl/ca-bundle.crl"
+#SSLCARevocationPath "c:/Softwares/Apache24/conf/ssl.crl"
+#SSLCARevocationFile "c:/Softwares/Apache24/conf/ssl.crl/ca-bundle.crl"
 #SSLCARevocationCheck chain
 
 #   Client Authentication (Type):
@@ -417,8 +414,8 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 #   file (containing login information for SRP user accounts). 
 #   Requires OpenSSL 1.0.1 or newer. See the mod_ssl FAQ for
 #   detailed instructions on creating this file. Example:
-#   "openssl srp -srpvfile c:/Apache/2.4/conf/passwd.srpv -add username"
-#SSLSRPVerifierFile "c:/Apache/2.4/conf/passwd.srpv"
+#   "openssl srp -srpvfile c:/Softwares/Apache24/conf/passwd.srpv -add username"
+#SSLSRPVerifierFile "c:/Softwares/Apache24/conf/passwd.srpv"
 
 #   Access Control:
 #   With SSLRequire you can do per-directory access control based
@@ -466,7 +463,7 @@ SSLCertificateKeyFile "c:/Apache/2.4/conf/server.key"
 <FilesMatch "\.(cgi|shtml|phtml|php)$">
     SSLOptions +StdEnvVars
 </FilesMatch>
-<Directory "c:/Apache/2.4/cgi-bin">
+<Directory "c:/Softwares/Apache24/cgi-bin">
     SSLOptions +StdEnvVars
 </Directory>
 
@@ -501,7 +498,8 @@ BrowserMatch "MSIE [2-5]" \
 #   Per-Server Logging:
 #   The home of a custom SSL log file. Use this when you want a
 #   compact non-error SSL logfile on a virtual host basis.
-CustomLog "c:/Apache/2.4/logs/ssl_request.log" \
+CustomLog "c:/Softwares/Apache24/logs/ssl_request.log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
 </VirtualHost>                                  
+
