--- a/apache2.4/extra/httpd-vhosts.conf
+++ b/apache2.4/extra/httpd-vhosts.conf
@@ -16,11 +16,11 @@
 
 
 <Proxy balancer://siteus>
-    BalancerMember http://10.128.43.114:80  retry=0
+    BalancerMember http://169.254.25.213:80  retry=0
 </Proxy>
 
 <Proxy balancer://sitecn>
-    BalancerMember http://10.128.43.114:8080  retry=0
+    BalancerMember http://169.254.25.214:80  retry=0
 </Proxy>
 
 #
@@ -30,62 +30,52 @@
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 
-# Bad Hosts
-<VirtualHost 127.0.0.1:80>
-
-    ServerAdmin dla_hao_developer@ef.com
-    ServerName invalid.englishtown.com
-
-    RewriteEngine on
-
-    # Return 406 (Not Acceptable) for invalid requests with referer.
-    RewriteCond %{HTTP_REFERER} ^(.+)$
-    RewriteRule ^/(.*)  -   [R=406,L]
-
-    RewriteRule ^/(.*)  /bad-hosts.html    [L]
-
-    <Directory "c:/Apache/2.4">
-        AllowOverride None
-        Options None
-        Require all granted
-    </Directory>
-
-    ErrorLog "c:/Apache/2.4/logs/invalid-error.log"
-    CustomLog "c:/Apache/2.4/logs/invalid-access.log" common
-
-</VirtualHost>
+# It won't be timed out when debugging.
+ProxyTimeout    3600
 
 # Site US
 <VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
     ServerName local.englishtown.com
+    ServerAlias 127.0.0.1
+    ServerAlias localhost
     ServerAlias dev.englishtown.com
     ServerAlias dev-services.englishtown.com
     ServerAlias dev-comet.englishtown.com
+    ServerAlias devus1.englishtown.com
     # More domains below
+    ServerAlias cache-ak.englishtown.com
     ServerAlias cache-ak1.englishtown.com
     ServerAlias cache-ak2.englishtown.com
-    ServerAlias devus1.englishtown.com
 
-    Header merge X-Proxied-By   "Apache2.4"
-    Header merge X-VirtualHost  "siteus"
+    # When access IIS directly, those url rewrite rules need be configured in IIS accordingly.
+    RewriteEngine on
+    # Frontend Projects
+    RewriteRule /_shared/headerfooter/latest/(.*)       /Stash/~mapped-ui-projects/et-ui-headerfooter/dist/$1    [NC,PT]
+    RewriteRule /_shared/([^/]+?)/latest/(.*)           /Stash/~mapped-ui-projects/$1/dist/$2                    [NC,PT]
 
     ProxyPreserveHost on
-
-    # CQ5
-    ProxyPass /dam          http://juno2.englishtown.com/CQ5Proxy/content/dam
     ProxyPass /             balancer://siteus/
     ProxyPassReverse /      balancer://siteus/
 
-    <Directory "c:/Apache/2.4">
+    # Ideally, we should only set this header for requests fired by a HTTPS troop proxy request.
+    # RequestHeader setifempty X-Is-Secure "true"
+
+    # Response Headers
+    Header merge        X-Proxied-By                "Apache2.4"
+    Header merge        X-VirtualHost               "siteus"
+    Header setifempty   Access-Control-Allow-Origin "*" "expr=%{REQUEST_URI} =~ m#^/_shared/#"
+
+    <Directory "c:/Softwares/Apache24">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "c:/Apache/2.4/logs/siteus-error.log"
-    CustomLog "c:/Apache/2.4/logs/siteus-access.log" common
+    ErrorLog "c:/Softwares/Apache24/logs/error-siteus.log"
+    CustomLog "c:/Softwares/Apache24/logs/access-siteus.log" combined
+    # CustomLog "|c:/Softwares/Apache24/bin/logforwarder-demo.exe siteus" combined
 
 </VirtualHost>
 
@@ -97,28 +87,58 @@
     ServerAlias devcn.englishtown.com
     ServerAlias devcn-services.englishtown.com
     ServerAlias devcn-comet.englishtown.com
-    # More domains below
-    ServerAlias corporate.englishtown.cn
-    ServerAlias corporatebeta.englishtown.cn
+    ServerAlias devcn1.englishtown.com
 
-    Header merge X-Proxied-By   "Apache2.4"
-    Header merge X-VirtualHost  "sitecn"
+    RewriteEngine on
+    # Frontend Projects
+    RewriteRule /_shared/headerfooter/latest/(.*)       /Stash/~mapped-ui-projects/et-ui-headerfooter/dist/$1    [NC,PT]
+    RewriteRule /_shared/([^/]+?)/latest/(.*)           /Stash/~mapped-ui-projects/$1/dist/$2                    [NC,PT]
 
     ProxyPreserveHost on
-
-    # CQ5
-    ProxyPass /dam          http://juno2.englishtown.com/CQ5Proxy/content/dam
     ProxyPass /             balancer://sitecn/
     ProxyPassReverse /      balancer://sitecn/
 
-    <Directory "c:/Apache/2.4">
+    # Response Headers
+    Header merge        X-Proxied-By                "Apache2.4"
+    Header merge        X-VirtualHost               "sitecn"
+    Header setifempty   Access-Control-Allow-Origin "*" "expr=%{REQUEST_URI} =~ m#^/_shared/#"
+
+
+    <Directory "c:/Softwares/Apache24">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "c:/Apache/2.4/logs/sitecn-error.log"
-    CustomLog "c:/Apache/2.4/logs/sitecn-access.log" common
+    ErrorLog "c:/Softwares/Apache24/logs/error-sitecn.log"
+    CustomLog "c:/Softwares/Apache24/logs/access-sitecn.log" combined
+    # CustomLog "|c:/Softwares/Apache24/bin/logforwarder-demo.exe sitecn" combined
+
+</VirtualHost>
+
+# Frontend debug.
+<VirtualHost 127.0.0.1:80>
+
+    ServerAdmin dla_hao_developer@ef.com
+    ServerName debug.local
+    ServerAlias *.debug.local
+    DocumentRoot "E:/Stash/~brayden.li/frontend-debug"
+
+    ProxyPreserveHost on
+    ProxyPass /index.html   !
+    ProxyPass /js/          !
+    ProxyPass /css/         !
+    ProxyPass /             http://local.englishtown.com/
+    ProxyPassReverse /      http://local.englishtown.com/
+
+    <Directory "E:/Stash/~brayden.li/frontend-debug">
+        AllowOverride None
+        Options None
+        Require all granted
+    </Directory>
+
+    ErrorLog "c:/Softwares/Apache24/logs/error.log"
+    CustomLog "c:/Softwares/Apache24/logs/access.log" combined
 
 </VirtualHost>
 
@@ -128,13 +148,13 @@
     ServerAdmin dla_hao_developer@ef.com
     ServerName apache.englishtown.com
 
-    <Directory "c:/Apache/2.4">
+    <Directory "c:/Softwares/Apache24">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "c:/Apache/2.4/logs/error.log"
-    CustomLog "c:/Apache/2.4/logs/access.log" common
+    ErrorLog "c:/Softwares/Apache24/logs/error.log"
+    CustomLog "c:/Softwares/Apache24/logs/access.log" combined
 
 </VirtualHost>
