--- a/apache2.4/httpd.conf
+++ b/apache2.4/httpd.conf
@@ -34,7 +34,7 @@
 # same ServerRoot for multiple httpd daemons, you will need to change at
 # least PidFile.
 #
-ServerRoot "c:/Apache/2.4"
+ServerRoot "c:/Softwares/Apache24"
 
 #
 # Mutex: Allows you to set the mutex mechanism and mutex file directory
@@ -126,7 +126,7 @@ LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
 #LoadModule lbmethod_heartbeat_module modules/mod_lbmethod_heartbeat.so
 #LoadModule ldap_module modules/mod_ldap.so
-#LoadModule logio_module modules/mod_logio.so
+LoadModule logio_module modules/mod_logio.so
 LoadModule log_config_module modules/mod_log_config.so
 #LoadModule log_debug_module modules/mod_log_debug.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
@@ -166,7 +166,7 @@ LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule speling_module modules/mod_speling.so
 LoadModule ssl_module modules/mod_ssl.so
 LoadModule status_module modules/mod_status.so
-#LoadModule substitute_module modules/mod_substitute.so
+LoadModule substitute_module modules/mod_substitute.so
 #LoadModule unique_id_module modules/mod_unique_id.so
 #LoadModule userdir_module modules/mod_userdir.so
 #LoadModule usertrack_module modules/mod_usertrack.so
@@ -239,8 +239,8 @@ ServerAdmin admin@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "c:/Apache/2.4/htdocs"
-<Directory "c:/Apache/2.4/htdocs">
+DocumentRoot "c:/Softwares/Apache24/htdocs"
+<Directory "c:/Softwares/Apache24/htdocs">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -305,12 +305,17 @@ LogLevel warn
     # The following directives define some format nicknames for use with
     # a CustomLog directive (see below).
     #
-    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-    LogFormat "%h %l %u %t \"%r\" %>s %b" common
+    # LogFormat "%h %D %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+    #Fields: timereceived servername serverip method uri query serverport clientip useragent referer status timetaken
+    LogFormat "%t %v %h %m %U \"%q\" %p %a \"%{Referer}i\" \"%{User-Agent}i\" %>s %{ms}T" combined
+    # LogFormat "%h %l %u %t \"%r\" %>s %b" common
+    LogFormat "%h %{remote}p %u %t %{HOST}i \"%r\" %>s %b \"%{Referer}i\"" common
 
     <IfModule logio_module>
       # You need to enable mod_logio.c to use %I and %O
-      LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
+      # LogFormat "%h %D %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
+      #Fields: timereceived servername serverip method uri query serverport clientip useragent referer status bytesreceived bytessent ttfb
+      LogFormat "%t %V %h %m %U \"%q\" %p %a \"%{Referer}i\" \"%{User-Agent}i\" %>s %I %O" combinedio
     </IfModule>
 
     #
@@ -356,7 +361,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "c:/Apache/2.4/cgi-bin/"
+    ScriptAlias /cgi-bin/ "c:/Softwares/Apache24/cgi-bin/"
 
 </IfModule>
 
@@ -369,10 +374,10 @@ LogLevel warn
 </IfModule>
 
 #
-# "c:/Apache/2.4/cgi-bin" should be changed to whatever your ScriptAliased
+# "c:/Softwares/Apache24/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-<Directory "c:/Apache/2.4/cgi-bin">
+<Directory "c:/Softwares/Apache24/cgi-bin">
     AllowOverride None
     Options None
     Require all granted
@@ -471,7 +476,7 @@ LogLevel warn
 # necessary.
 
 # Server-pool management (MPM specific)
-#Include conf/extra/httpd-mpm.conf
+Include conf/extra/httpd-mpm.conf
 
 # Multi-language error messages
 #Include conf/extra/httpd-multilang-errordoc.conf
@@ -516,14 +521,7 @@ Include conf/extra/httpd-ssl.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
-#
-# uncomment out the below to deal with user agents that deliberately
-# violate open standards by misusing DNT (DNT *must* be a specific
-# end-user choice)
-#
-#<IfModule setenvif_module>
-#BrowserMatch "MSIE 10.0;" bad_DNT
-#</IfModule>
-#<IfModule headers_module>
-#RequestHeader unset DNT env=bad_DNT
-#</IfModule>
+
+<IfModule substitute_module>
+    Substitute s|techcheck-ui|techcheck-ui-xxx|i
+</IfModule>
