--- a/apache2.4/extra/httpd-manual.conf
+++ b/apache2.4/extra/httpd-manual.conf
@@ -8,9 +8,9 @@
 #                   mod_setenvif, mod_negotiation
 #
 
-AliasMatch ^/manual(?:/(?:da|de|en|es|fr|ja|ko|pt-br|ru|tr|zh-cn))?(/.*)?$ "c:/Apache/2.4/manual$1"
+AliasMatch ^/manual(?:/(?:da|de|en|es|fr|ja|ko|pt-br|ru|tr|zh-cn))?(/.*)?$ "c:/Softwares/Apache24/manual$1"
 
-<Directory "c:/Apache/2.4/manual">
+<Directory "c:/Softwares/Apache24/manual">
     Options Indexes
     AllowOverride None
     Require all granted
